tests/ui/derives/eq-ord/derives-span-PartialEq.stderr
error[E0369]: binary operation `==` cannot be applied to type `&Error`
  --> $DIR/derives-span-PartialEq.rs:9:9
   |
LL | #[derive(PartialEq)]
   |          --------- in this derive macro expansion
...
LL |         x: Error,
   |         ^^^^^^^^
   |
note: an implementation of `PartialEq` might be missing for `Error`
  --> $DIR/derives-span-PartialEq.rs:4:1
   |
LL | struct Error;
   | ^^^^^^^^^^^^ must implement `PartialEq`
help: consider annotating `Error` with `#[derive(PartialEq)]`
   |
LL + #[derive(PartialEq)]
LL | struct Error;
   |

error[E0369]: binary operation `==` cannot be applied to type `&Error`
  --> $DIR/derives-span-PartialEq.rs:16:9
   |
LL | #[derive(PartialEq)]
   |          --------- in this derive macro expansion
...
LL |         Error,
   |         ^^^^^
   |
note: an implementation of `PartialEq` might be missing for `Error`
  --> $DIR/derives-span-PartialEq.rs:4:1
   |
LL | struct Error;
   | ^^^^^^^^^^^^ must implement `PartialEq`
help: consider annotating `Error` with `#[derive(PartialEq)]`
   |
LL + #[derive(PartialEq)]
LL | struct Error;
   |

error[E0369]: binary operation `==` cannot be applied to type `Error`
  --> $DIR/derives-span-PartialEq.rs:21:5
   |
LL | #[derive(PartialEq)]
   |          --------- in this derive macro expansion
LL | struct Struct {
LL |     x: Error,
   |     ^^^^^^^^
   |
note: an implementation of `PartialEq` might be missing for `Error`
  --> $DIR/derives-span-PartialEq.rs:4:1
   |
LL | struct Error;
   | ^^^^^^^^^^^^ must implement `PartialEq`
help: consider annotating `Error` with `#[derive(PartialEq)]`
   |
LL + #[derive(PartialEq)]
LL | struct Error;
   |

error[E0369]: binary operation `==` cannot be applied to type `Error`
  --> $DIR/derives-span-PartialEq.rs:26:5
   |
LL | #[derive(PartialEq)]
   |          --------- in this derive macro expansion
LL | struct TupleStruct(
LL |     Error,
   |     ^^^^^
   |
note: an implementation of `PartialEq` might be missing for `Error`
  --> $DIR/derives-span-PartialEq.rs:4:1
   |
LL | struct Error;
   | ^^^^^^^^^^^^ must implement `PartialEq`
help: consider annotating `Error` with `#[derive(PartialEq)]`
   |
LL + #[derive(PartialEq)]
LL | struct Error;
   |

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0369`.
